Fixed arquillian issues