@@ -50,6 +50,42 @@
 				<version>2.12</version>
 			</plugin>
 		</plugins>
+		<pluginManagement>
+			<plugins>
+				<!--This plugin's configuration is used to store Eclipse m2e settings 
+					only. It has no influence on the Maven build itself. -->
+				<plugin>
+					<groupId>org.eclipse.m2e</groupId>
+					<artifactId>lifecycle-mapping</artifactId>
+					<version>1.0.0</version>
+					<configuration>
+						<lifecycleMappingMetadata>
+							<pluginExecutions>
+								<pluginExecution>
+									<pluginExecutionFilter>
+										<groupId>
+											org.apache.maven.plugins
+										</groupId>
+										<artifactId>
+											maven-dependency-plugin
+										</artifactId>
+										<versionRange>
+											[2.1,)
+										</versionRange>
+										<goals>
+											<goal>unpack</goal>
+										</goals>
+									</pluginExecutionFilter>
+									<action>
+										<ignore></ignore>
+									</action>
+								</pluginExecution>
+							</pluginExecutions>
+						</lifecycleMappingMetadata>
+					</configuration>
+				</plugin>
+			</plugins>
+		</pluginManagement>
 	</build>
 	<dependencies>
 		<dependency>
@@ -83,18 +119,18 @@
 			<version>4.3.0.Beta3</version>
 		</dependency>
 		<dependency>
-			<groupId>org.jboss.arquillian.junit</groupId>
-			<artifactId>arquillian-junit-container</artifactId>
-			<scope>test</scope>
-			<version>1.1.1.Final</version>
-		</dependency>
-		<dependency>
 			<groupId>org.jboss.spec</groupId>
 			<artifactId>jboss-javaee-6.0</artifactId>
 			<version>1.0.0.Final</version>
 			<type>pom</type>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-simple</artifactId>
+			<version>1.7.5</version>
+		</dependency>
+
 	</dependencies>
 
 	<profiles>
@@ -145,19 +181,39 @@
 
 
 		<profile>
-			<id>arquillian-weld-ee-embedded</id>
+			<id>integration-tests</id>
+			<properties>
+				<version.arquillian>1.0.3.Final</version.arquillian>
+			</properties>
+
 			<dependencyManagement>
 				<dependencies>
 					<dependency>
 						<groupId>org.jboss.arquillian</groupId>
 						<artifactId>arquillian-bom</artifactId>
-						<version>1.0.3.Final</version>
+						<version>${version.arquillian}</version>
 						<scope>import</scope>
 						<type>pom</type>
 					</dependency>
 				</dependencies>
 			</dependencyManagement>
 			<dependencies>
+				<dependency>
+					<groupId>junit</groupId>
+					<artifactId>junit</artifactId>
+					<scope>test</scope>
+					<version>4.11</version>
+				</dependency>
+				<dependency>
+					<groupId>org.jboss.arquillian.junit</groupId>
+					<artifactId>arquillian-junit-container</artifactId>
+					<scope>test</scope>
+				</dependency>
+				<dependency>
+					<groupId>org.jboss.arquillian.protocol</groupId>
+					<artifactId>arquillian-protocol-servlet</artifactId>
+					<scope>test</scope>
+				</dependency>
 				<dependency>
 					<groupId>org.jboss.spec</groupId>
 					<artifactId>jboss-javaee-6.0</artifactId>
@@ -166,85 +222,45 @@
 					<scope>provided</scope>
 				</dependency>
 				<dependency>
-					<groupId>org.jboss.arquillian.container</groupId>
-					<artifactId>arquillian-weld-ee-embedded-1.1</artifactId>
-					<version>1.0.0.CR3</version>
-					<scope>test</scope>
-				</dependency>
-				<dependency>
-					<groupId>org.jboss.weld</groupId>
-					<artifactId>weld-core</artifactId>
-					<version>1.1.5.Final</version>
-					<scope>test</scope>
-				</dependency>
-				<dependency>
-					<groupId>org.slf4j</groupId>
-					<artifactId>slf4j-simple</artifactId>
-					<version>1.6.4</version>
+					<groupId>org.jboss.as</groupId>
+					<artifactId>jboss-as-arquillian-container-managed</artifactId>
+					<version>7.1.1.Final</version>
 					<scope>test</scope>
 				</dependency>
 			</dependencies>
-		</profile>
 
-
-		<profile>
-			<id>jbossas-embedded-6</id>
-			<dependencies>
-				<dependency>
-					<groupId>org.jboss.arquillian.container</groupId>
-					<artifactId>arquillian-jbossas-embedded-6</artifactId>
-					<version>1.0.0-SNAPSHOT</version>
-				</dependency>
-				<dependency>
-					<groupId>org.jboss.jbossas</groupId>
-					<artifactId>jboss-as-depchain</artifactId>
-					<version>6.0.0.Final</version>
-					<type>pom</type>
-				</dependency>
-			</dependencies>
-			<dependencyManagement>
-				<dependencies>
-					<dependency>
-						<groupId>org.jboss.jbossas</groupId>
-						<artifactId>jboss-as-depchain</artifactId>
-						<version>6.0.0.Final</version>
-						<type>pom</type>
-						<scope>import</scope>
-					</dependency>
-				</dependencies>
-			</dependencyManagement>
+			<!-- This optional build configuration downloads and extracts JBoss AS 
+				automatically -->
+			<!-- Remove it if you want to use an existing installation defined by 
+				the JBOSS_HOME environment variable -->
 			<build>
 				<plugins>
 					<plugin>
-						<artifactId>maven-surefire-plugin</artifactId>
-						<configuration>
-							<additionalClasspathElements>
-								<additionalClasspathElement>${env.JBOSS_HOME}/client/jbossws-native-client.jar</additionalClasspathElement>
-								<!-- Because jbossweb.sar contains shared web.xml, which must be 
-									visible from same CL as TomcatDeployer.class.getClassLoader -->
-								<additionalClasspathElement>${env.JBOSS_HOME}/server/default/deploy/jbossweb.sar</additionalClasspathElement>
-							</additionalClasspathElements>
-
-							<redirectTestOutputToFile>true</redirectTestOutputToFile>
-							<trimStackTrace>false</trimStackTrace>
-							<printSummary>true</printSummary>
-							<forkMode>once</forkMode>
-
-							<!-- MaxPermSize Required to bump the space for relective data like 
-								classes, methods, etc. EMB-41. Endorsed required for things like WS support 
-								(EMB-61) -->
-							<argLine>-Xmx512m -XX:MaxPermSize=256m
-								-Djava.net.preferIPv4Stack=true
-								-Djava.util.logging.manager=org.jboss.logmanager.LogManager
-								-Djava.endorsed.dirs=${env.JBOSS_HOME}/lib/endorsed
-								-Djboss.home=${env.JBOSS_HOME}
-								-Djboss.boot.server.log.dir=${env.JBOSS_HOME}</argLine>
-						</configuration>
+						<artifactId>maven-dependency-plugin</artifactId>
+						<executions>
+							<execution>
+								<id>unpack</id>
+								<phase>process-test-classes</phase>
+								<goals>
+									<goal>unpack</goal>
+								</goals>
+								<configuration>
+									<artifactItems>
+										<artifactItem>
+											<groupId>org.jboss.as</groupId>
+											<artifactId>jboss-as-dist</artifactId>
+											<version>7.1.1.Final</version>
+											<type>tar.gz</type>
+											<overWrite>false</overWrite>
+											<outputDirectory>target</outputDirectory>
+										</artifactItem>
+									</artifactItems>
+								</configuration>
+							</execution>
+						</executions>
 					</plugin>
 				</plugins>
 			</build>
 		</profile>
-
-
 	</profiles>
 </project>
